# bluecherry-esp-idf

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
.github/workflows/: idf.yml
examples/wifi-template/: README.md  sdkconfig.defaults
examples/wifi-template/main/: CMakeLists.txt  idf_component.yml  main.c
examples/wifi-template/main/credentials/: devcert.pem  wifi.h
src/: bluecherry.c  bluecherry.h
